--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="jp.ac.fjb.x15g020.opencv_test.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+   <!--<org.opencv.android.JavaCameraView-->
+       <!--android:id="@+id/camera_view"-->
+       <!--android:layout_width="match_parent"-->
+       <!--android:layout_height="match_parent"-->
+       <!--android:camera_id="any"-->
+       <!--android:show_fps="true"/>-->
+
+
 </RelativeLayout>
